# agent_dart

./: .flutter_rust_bridge.yml  .gitattributes  .gitignore  .pubignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  _main.dart  analysis_options.yaml  files.txt  melos.yaml  pubspec.yaml
.github/: dependablt.yaml
.github/ISSUE_TEMPLATE/: bounty.md
.github/workflows/: automerge.yml  build_async_bindings_main.yml  build_bindings.yml  build_bindings_android_ios_macos.yml  build_bindings_ios_android_macos.yml  build_bindings_linux.yml  build_bindings_windows.yml  publish.yml  reusable_build_binding.yml  runnable.yml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/ios/: Podfile
example/lib/: counter.dart  init.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/: .gitignore  Podfile
example/test/: widget_test.dart
ios/: .gitignore  agent_dart.podspec
lib/: agent_dart.dart  agent_dart_web.dart  is_web.dart
linux/: .gitignore  CMakeLists.txt  agent_dart_plugin.cc
macos/: .gitignore  agent_dart.podspec  libagent_dart.dylib
rust/: Cargo.toml
rust/agent_dart/: Cargo.toml
rust/agent_dart/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  ed25519.rs  keyring.rs  keystore.rs  lib.rs  p256.rs  schnorr.rs  secp256k1.rs  sha.rs  types.rs
rust/agent_dart/src/bls/: hmac.rs  mod.rs
rust/agent_dart/src/bls/bls12381/: mpin.rs
rust/bridge/ffi/: bridge_generated.dart
rust/dylib/debug/: libagent_dart.dylib
rust/ed_compact/: Cargo.toml
rust/headers/: bridge_generated.h
rust/src/: api.rs  bip32.rs  bridge_generated.rs  common.rs  ed25519.rs  keystore.rs  lib.rs  secp256k1.rs  types.rs
rust/src/bls/: mod.rs
scripts/: bootstrap.sh  bootstrap_ci.sh  build-android.bat  build-android.sh  build-apple.sh  build-dart.sh  build-end.sh  build-ffi.sh  build-ios.sh  build-mac.sh  build-other.sh  build-windows.bat  build.sh  build_android.sh  build_android_ci.sh  build_apple.sh  build_ci.sh  build_dart_ffi.sh  build_end.sh  build_ffi.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_macos.sh  build_other.sh  build_protobuf.sh  build_windows.sh  clean.sh  clean_all.sh  clean_rust.sh  init.sh  publish.sh  replace_symlinks_before_publish.sh  runTest.sh  type_gen.sh.bak  variables.sh  version.sh
test/: agent_dart_test.dart  test_utils.dart
windows/: .gitignore  CMakeLists.txt  agent_dart_plugin.cpp
(+185 files in other folders)
