[package]
name = "agent_dart"
version = "0.0.1"
authors = ["neeboo <ghostcorn@gmail.com>"]
edition = "2018"

[lib]
name = "agent_dart"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hex = "0.4.2"
ring = { version = "0.16.11", features = ["std"] }
rustc-hex = "2.1.0"
flutter_rust_bridge = "1.31.0"

[dev-dependencies]
hex-literal = "0.3.1"

[profile.release]
debug = true