[package]
name = "agent_dart"
version = "0.0.1"
authors = ["neeboo <ghostcorn@gmail.com>"]
edition = "2018"

[lib]
name = "agent_dart"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bip32 = "0.4.0"
bip39 = "1.0.1"
ring = "0.16.11"
k256 = { version = "0.11.2", features = ["pem"] }
flutter_rust_bridge = "1"

[profile.release]
debug = false
opt-level = "z"
lto = true